src/assets/styles/abstracts/_variables.scss
$browser-context: 16;

/** Typography **/
$family-sans-serif: "Fira Sans", sans-serif;
$font-weight-normal: 400;
$font-weight-medium: 500;
$font-weight-semibold: 600;
$font-weight-bold: 700;

/** Max Widths **/
$max-width-margins: rem(1600);

// the ch widths represent the max width of the "main" element in narrow and wide viewports
$full-width-video-margins: calc(-50vw + min(37.5ch, 50%));
$full-width-video-widescreen-margins: calc(-50vw + min(65ch, 50%));

/** Colors **/

// Primary
$white: #fff;
$red: #ff3636;
$red-light: #ffaca7;
$blue-dark: #6895c6;
$blue: #84bcde;
$blue-light: #acdde9;
$gold-dark: #fcb33e;
$gold: #fdcc70;
$gold-light: #ffe6a7;

// Secondary
$black: #000;
$grey-lightest: #f8f8f8;
$grey-lighter: #f3f3f3;
$grey-light: #e7e7e7;
$grey-mid-light: #888;
$grey-mid: #6c6c6c;
$grey-dark: #313131;
$grey-shade: #c4c4c4;
$navy: #203149;
$navy-light: #2e405b;
$blue-alt: #5c81a9;
$blue-alt-contrast: #5879a0;
$blue-alt-dark: #4d6b8d;
$blue-alt-light: #8caabb;
$blue-grey: #abdde9;
$azure: #89b2e0;
$green: #b0d0be;
$green-light: #cee6c5;
$green-dark: #465d8b;
$green-pale: #f7fff4;
$green-grey: #cde6c4;
$orange-focus: #fadc90;
$orange-light: #5c81a9;
$yellow: #ffcb70;
$border-shadow-radius: rem(4);
$border-shadow-colour: rgba(0 0 0 / 25%);
$border-shadow-light: 0 0 $border-shadow-radius $border-shadow-colour;
$topic-title-border-radius: rem(8);

// UIO themes
$uio-themes: "bw" #000 #fff,
	"wb" #fff #000,
	"yb" #ff0 #000,
	"by" #000 #ff0,
	"lgdg" #bdbdbb #555,
	"gd" #888 #222,
	"gw" #6c6c6c #fff,
	"bbr" #000 #b96;

// Responsive Breakpoints, shamelessy cribbed from Bootstrap.
// @see https://github.com/twbs/bootstrap/blob/master/scss/mixins/_breakpoints.scss

$breakpoints: (
	xs: 280,
	sm: 640,
	md: 760,
	lg: 1100,
	xl: 1366
);

